--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -262,7 +262,7 @@ td {
 /**
  *  Icons
  */
-.icon, .icon-small, .icon-lowopacity, .icon-verylowopacity, .icon-mediumopacity, .icon-nf, .icon-np {
+.icon, .icon-small, .icon-medium, .icon-lowopacity, .icon-verylowopacity, .icon-mediumopacity, .icon-nf, .icon-np {
     height: 15px;
     margin-left: 5px;
     margin-right: 5px;
@@ -273,7 +273,7 @@ td {
     height: 8px !important;
 }
 .icon-medium {
-    height: 12px !important;
+    height: 18px !important;
 }
 .icon-lowopacity {
     opacity: 0.33;
