--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -1,5 +1,5 @@
 /**
- *  v1.9
+ *  v1.10
  */
 @font-face{font-family: 'Roboto'; src: url('/assets/fonts/Roboto/Roboto-Regular.ttf') format('truetype');}
 
@@ -137,6 +137,7 @@ pre.codeblock {
 .grid-fr-auto-1-2 {grid-template-columns: auto 1fr 2fr !important}
 .grid-fr-auto-1-3 {grid-template-columns: auto 1fr 3fr !important}
 .grid-fr-5 {grid-template-columns: 1fr 1fr 1fr 1fr 1fr !important}
+.grid-fr-6 {grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr !important}
 .justify-center {justify-content: center}
 .justify-space-between {justify-content: space-between}
 .justify-end {justify-content: flex-end}
@@ -521,11 +522,7 @@ input[type=checkbox]:not(.onoff-switch-input):checked {
     background-color: initial;
     box-shadow: rgb(32 25 25 / 50%) 0px 0px 15px 1px;
     border: 1px solid #ffffff52;
-    /* opacity: 0.5; */
 }
-/* .slide-btn-tr:hover, .slide-btn-medium-tr:hover {
-    opacity: 1;
-} */
 
 /* override slide-btn */
 [class^="slide-btn-medium"] {
