--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -589,7 +589,7 @@ input[type=checkbox]:not(.onoff-switch-input):checked {
     background-color: #f10e4b;
 }
 .slide-btn-yellow {
-    background-color: #eb984e;
+    background-color: #ffb536;
 }
 .slide-btn-yellow:hover {
     background-color: #eb984e;
