Squashed commit of the following:
commit 271a10b288bb3896ea53a9103c0d98fce92c022c
Merge: fb1149a 7e575bb
Author: Ludo <54670129+lbr38@users.noreply.github.com>
Date:   Tue Jan 21 11:30:03 2025 -0500

    Merge pull request #229 from alryaz/patch-2

    feat: add PVE repositories

commit fb1149a382c8f29ff213a803cd11d83d41ac3a33
Author: Ludovic <54670129+lbr38@users.noreply.github.com>
Date:   Tue Jan 21 17:22:13 2025 +0100

    patch

commit 132dbc66fa67a804f8a52df4596a2b91eea4f95f
Author: Ludovic <54670129+lbr38@users.noreply.github.com>
Date:   Tue Jan 21 17:12:27 2025 +0100

    patch

commit f86c8902eeebd0ce7887a26d8f9528f666033a59
Merge: 982e65d e3b248e
Author: Ludo <54670129+lbr38@users.noreply.github.com>
Date:   Tue Jan 21 11:12:14 2025 -0500

    Merge pull request #228 from alryaz/patch-1

    feat: import binary GPG keys

commit 982e65d9ab27f4c29f38d1dac8341cd89446e187
Author: Ludovic <54670129+lbr38@users.noreply.github.com>
Date:   Tue Jan 21 13:58:04 2025 +0100

    4.16.2

commit 7e575bb4dbe599ac5e3542f4a2c5325b5028bf6c
Author: Ryazanov Alexander Mihailovich <alryaz@alryaz.com>
Date:   Tue Jan 21 11:40:11 2025 +0300

    feat: add PVE repositories

commit e3b248e5314af0f9af249ec47d8c4254d085859f
Author: Ryazanov Alexander Mihailovich <alryaz@alryaz.com>
Date:   Tue Jan 21 11:30:11 2025 +0300

    fix: curl printing to stdout

commit 70b6d48f12d823b208aa5db79a0a40f3cb831b8d
Author: Ryazanov Alexander Mihailovich <alryaz@alryaz.com>
Date:   Tue Jan 21 11:17:20 2025 +0300

    refactor: prase binary GPG keys

--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -213,6 +213,7 @@ pre.codeblock {
 .min-height-100 {min-height: 100px}.min-height-200 {min-height: 200px}.min-height-300 {min-height: 300px}.min-height-400 {min-height: 400px}.min-height-500 {min-height: 500px}.min-height-600 {min-height: 600px}.min-height-700 {min-height: 700px}.min-height-800 {min-height: 800px}.min-height-900 {min-height: 900px}.min-height-1000 {min-height: 1000px}
 .min-width-100 {min-width: 100px}.min-width-200 {min-width: 200px}.min-width-300 {min-width: 300px}.min-width-400 {min-width: 400px}.min-width-500 {min-width: 500px}.min-width-600 {min-width: 600px}.min-width-700 {min-width: 700px}.min-width-800 {min-width: 800px}.min-width-900 {min-width: 900px}.min-width-1000 {min-width: 1000px}
 .width-100{width:100%}
+.height-100{height:100%}
 .max-width-fit{max-width:fit-content}
 .resize-disabled{resize:none;}
 
@@ -344,6 +345,10 @@ td {
 /**
  *  Forms, button, input, textarea
  */
+input {
+    accent-color: #15bf7f;
+}
+
 input[type=text], input[type=date], input[type=time], input[type=number], input[type=email], input[type=password], input[type=color], input[type=file], select {
     width: 100%;
     height: 35px;
