--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -98,6 +98,7 @@ h6 {
     font-style: italic;
     color: #8A99AA;
     margin-bottom: 2px;
+    word-break: break-all;
 }
 
 .required::after {
@@ -523,6 +524,7 @@ input[type=checkbox]:not(.onoff-switch-input):checked {
 .btn-xxsmall, .btn-xxsmall-blue, .btn-xxsmall-green, .btn-xxsmall-red, .btn-xxsmall-tr {
     margin: 2px;
     width: 34px;
+    height: 34px;
 }
 
 /* All transparent buttons (hover) */
@@ -1045,7 +1047,7 @@ textarea {
 .modal-window {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    max-height: 100vh;
     box-sizing: border-box;
     padding: 15px 15px 15px 15px;
     border-radius: 8px;
@@ -1053,7 +1055,20 @@ textarea {
     box-shadow: rgb(0 0 0) 0px 10px 13px -12px, rgb(0 0 0 / 15%) 0px 0px 10px 2px;
 }
 
-.modal-window pre {
+.modal-window-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-window-content {
+    padding: 20px;
+    text-wrap: wrap;
+    word-break: break-word;
+    overflow-y: auto;
+}
+
+.modal-window-content pre {
     min-height: 200px;
     padding: 20px;
     margin-top: 20px;
@@ -1120,7 +1135,7 @@ textarea {
     }
 
     .modal-window {
-        width: 70%;
+        width: 80%;
         max-height: 80%;
     }
 }
