--- a/www/public/resources/styles/stats-hosts.css
+++ b/www/public/resources/styles/stats-hosts.css
@@ -61,12 +61,6 @@
     margin-bottom: 500px;
 }
 
-.groups-container .header-container {
-    width: 32.8%;
-    display: inline-block;
-    margin: 4px;
-}
-
 .groups-container {
     columns: 1;
     -moz-column-count: 3;
@@ -102,8 +96,8 @@
 }
 
 .hosts-charts-container {
-    display: grid;
-    grid-template-columns: repeat(3, 32.5%);
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin: 0 auto 20px auto;
 }
@@ -156,7 +150,7 @@
     display: none;
 }
 
-.event-packages-details, .hosts-charts-list-label-hosts-list, #hosts-requiring-reboot-chart-list {
+.event-packages-details, #hosts-requiring-reboot-chart-list {
     display: none;
     position: absolute;
     left: 0;
@@ -166,14 +160,13 @@
     margin-top: 10px;
     padding: 20px 15px 20px 15px;
     text-align: left;
-    z-index: 5; /* Pour que le bloc s'affiche au dessus des autres et ne soit pas à moitié masqué */
-    border-radius: 8px;
+    z-index: 5;
+    border-radius: 20px;
     background-color: #112334;
-    -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgba(0,0,0,0.15);
     box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
 }
 
-#hosts-requiring-reboot-chart-list, .hosts-charts-list-label-hosts-list {
+#hosts-requiring-reboot-chart-list {
     flex-direction: column;
     row-gap: 6px;
     top: 100px;
@@ -181,9 +174,10 @@
     overflow: auto;
 }
 
-/* Timeline de l'historique d'un paquet
-   Source : https://www.w3schools.com/howto/howto_css_timeline.asp
-*/
+/**
+ * Package timeline
+ * https://www.w3schools.com/howto/howto_css_timeline.asp
+ */
 .timeline * {
     box-sizing: border-box;
 }
@@ -191,8 +185,11 @@
 /* The actual timeline (the vertical ruler) */
 .timeline {
     position: relative;
-    max-width: 1200px;
+    max-width: 70vw;
+    min-height: 50vh;
     margin: 0 auto;
+    padding: 20px;
+    border-radius: 40px 20px;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -277,5 +274,10 @@
     .groups-container {
         columns: 2;
         column-count: 2;
+    }
+
+    .hosts-charts-container {
+        display: grid;
+        grid-template-columns: repeat(3, 32.5%);
     }
 }
