--- a/www/public/resources/styles/common.css
+++ b/www/public/resources/styles/common.css
@@ -220,6 +220,7 @@ pre.codeblock {
 .width-100{width:100%}
 .height-100{height:100%}
 .max-width-fit{max-width:fit-content}
+.max-width-100{max-width:100px}.max-width-200{max-width:200px}.max-width-300{max-width:300px}.max-width-400{max-width:400px}.max-width-500{max-width:500px}.max-width-600{max-width:600px}.max-width-700{max-width:700px}.max-width-800{max-width:800px}.max-width-900{max-width:900px}.max-width-1000{max-width:1000px}
 .resize-disabled{resize:none;}
 
 code {
