--- a/www/templates/mail/mail.template.mjml
+++ b/www/templates/mail/mail.template.mjml
@@ -2,12 +2,12 @@
     <mj-body width="600px" background-color="#112334">
         <mj-section>
             <mj-column width="100%">
-                <mj-image width="150px" align="center" src="https://github.com/lbr38/repomanager/raw/main/www/public/assets/images/repomanager.png"></mj-image>
+                <mj-image width="50px" align="center" src="PROJECT_LOGO"></mj-image>
             </mj-column>
         </mj-section>
     
         <mj-section>
-            <mj-column background-color="#ffffff" width="500px" padding-top="30px" padding-right="30px" padding-bottom="30px" padding-left="30px" border-radius="10px" >
+            <mj-column background-color="#ffffff" width="500px" padding-top="30px" padding-right="30px" padding-bottom="30px" padding-left="30px" border-radius="20px" >
 
                 <mj-text font-size="14px" color="#666666" font-family="helvetica"> $content </mj-text>
 
@@ -19,7 +19,7 @@
         <mj-section>
             <mj-column width="100%">
 
-                <mj-text align="center" font-size="12px" color="#666666" font-family="helvetica">Project description<br>Github link</mj-text>
+                <mj-text align="center" font-size="12px" color="#8A99AA" font-family="helvetica">Project - Github link</mj-text>
 
             </mj-column>
         </mj-section>
